ec2news.tf
# __generated__ by Terraform
# Please review these resources and move them into your main configuration files.

# __generated__ by Terraform
resource "aws_key_pair" "testtin" {
  key_name        = "flaskin"
  key_name_prefix = null
  public_key      = file("./aws_inz.pub")
  tags            = {}
  tags_all        = {}
}

# __generated__ by Terraform from "vol-0cab6c20bc07f03a8"
resource "aws_ebs_volume" "testti" {
  availability_zone    = "eu-central-1a"
  encrypted            = false
  final_snapshot       = null
  iops                 = 3000
  kms_key_id           = null
  multi_attach_enabled = false
  outpost_arn          = null
  size                 = 8
  snapshot_id          = "snap-084fa3aecdad5091f"
  tags                 = {}
  tags_all             = {}
  throughput           = 125
  type                 = "gp3"
}

# __generated__ by Terraform from "sg-0d66a533b925c44f5"
resource "aws_security_group" "testt" {
  description = "launch-wizard-1 created 2023-11-13T13:20:11.265Z"
  egress = [{
    cidr_blocks      = ["0.0.0.0/0"]
    description      = ""
    from_port        = 0
    ipv6_cidr_blocks = []
    prefix_list_ids  = []
    protocol         = "-1"
    security_groups  = []
    self             = false
    to_port          = 0
  }]
  ingress = [{
    cidr_blocks      = ["0.0.0.0/0"]
    description      = ""
    from_port        = 443
    ipv6_cidr_blocks = []
    prefix_list_ids  = []
    protocol         = "tcp"
    security_groups  = []
    self             = false
    to_port          = 443
    }, {
    cidr_blocks      = ["0.0.0.0/0"]
    description      = ""
    from_port        = 80
    ipv6_cidr_blocks = []
    prefix_list_ids  = []
    protocol         = "tcp"
    security_groups  = []
    self             = false
    to_port          = 80
    }, {
    cidr_blocks      = ["77.254.227.234/32"]
    description      = ""
    from_port        = 22
    ipv6_cidr_blocks = []
    prefix_list_ids  = []
    protocol         = "tcp"
    security_groups  = []
    self             = false
    to_port          = 22
  }]
  name                   = "launch-wizard-2"
  name_prefix            = null
  revoke_rules_on_delete = null
  tags                   = {}
  tags_all               = {}
  vpc_id                 = "vpc-0a5a2a5cfd34cee4f"
}
